# vecgrep

./: .gitignore  BENCHMARK.md  CLAUDE.md  Cargo.toml  README.md  TODO.md  build.rs  flake.nix  vecgrep.allium
.direnv/: flake-profile-1-link
.github/workflows/: ci.yml
.vecgrep/: config.toml
doc/: CONFIG.md  GUIDE.md  SERVER.md  demo.tape  guide.md
skills/vecgrep/: SKILL.md
skills/vecgrep/agents/: openai.yaml
skills/vecgrep/references/: commands.md
src/: .gitignore  chunker.rs  cli.rs  config.rs  embedder.rs  index.rs  invocation.rs  lib.rs  main.rs  output.rs  paths.rs  pipeline.rs  root.rs  search.rs  serve.rs  tui.rs  types.rs  walker.rs
src/embedder/: local.rs  mod.rs  remote.rs
tests/: benchmark_large.rs  benchmark_models.rs  integration.rs
