[package]
name = "vecgrep"
version = "0.1.0"
edition = "2021"
description = "Semantic grep — like ripgrep, but with vector search"
authors = ["Martin Trojer <martin.trojer@gmail.com>"]
repository = "https://github.com/martintrojer/vecgrep"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
ort = "2.0.0-rc.9"
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }
ndarray = "0.17"
ignore = "0.4"
rusqlite = { version = "0.32", features = ["bundled", "blob"] }
blake3 = "1.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"
termcolor = "1.4"
rayon = "1.10"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
memmap2 = "0.9"
num_cpus = "1.16"
dirs = "6"
atty = "0.2"

# TUI (optional)
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", optional = true }
nucleo = { version = "0.5", optional = true }

[features]
default = ["tui"]
tui = ["dep:ratatui", "dep:crossterm", "dep:nucleo"]
cuda = []
coreml = []

[build-dependencies]
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"] }
sha2 = "0.10"
hex = "0.4"
dirs = "6"

[profile.release]
lto = true
codegen-units = 1
strip = true
