[package]
name = "vecgrep"
version = "0.7.1"
edition = "2021"
description = "Semantic grep — like ripgrep, but with vector search"
authors = ["Martin Trojer <martin.trojer@gmail.com>"]
repository = "https://github.com/martintrojer/vecgrep"
homepage = "https://github.com/martintrojer/vecgrep"
readme = "README.md"
license = "MIT"
keywords = ["grep", "search", "semantic", "embeddings", "vector"]
categories = ["command-line-utilities", "text-processing"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
ort = "2.0.0-rc.9"
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }
sqlite-vec = "0.1"
zerocopy = { version = "0.8", features = ["derive"] }
ndarray = "0.16"
ignore = "0.4"
rusqlite = { version = "0.32", features = ["bundled", "blob"] }
blake3 = "1.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"
termcolor = "1.4"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
memmap2 = "0.9"
num_cpus = "1.16"
dirs = "6"
ratatui = "0.29"
crossterm = "0.28"
nucleo = "0.5"
tiny_http = "0.12"
url = "2"
ureq = "3"
toml = "0.8"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"] }
sha2 = "0.10"
hex = "0.4"
dirs = "6"

[profile.release]
lto = true
codegen-units = 1
strip = true
